workspace-sf/force-app/main/default/objects/CanalDistribuicao__c/CanalDistribuicao__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar o cadastro dos canais de distribuição</description>
    <label>Canal de distribuição</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Canais de distribuição</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>