workspace-sf/force-app/main/default/objects/CanalDistribuicao__c/fields/Papeis__c.field-meta.xml
<CustomField>
    <fullName>Papeis__c</fullName>
    <label>Papéis</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Papeis</valueSetName>
    </valueSet>
</CustomField>