workspace-sf/force-app/main/default/objects/CanalDistribuicao__c/fields/PercentualDescontoMaximoCanal__c.field-meta.xml
<CustomField>
    <fullName>PercentualDescontoMaximoCanal__c</fullName>
    <label>Percentual de desconto máximo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>