workspace-sf/force-app/main/default/objects/CanalDistribuicao__c/validationRules/ValidarAtivacaoCanalDistribuicao.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarAtivacaoCanalDistribuicao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &apos;Ativo&apos;),
    NOT(ISPICKVAL(PRIORVALUE(Status__c), &apos;Em ativação&apos;))
)</errorConditionFormula>
    <errorMessage>O canal não pode ser ativado neste status</errorMessage>
</ValidationRule>