workspace-sf/force-app/main/default/objects/CanalDistribuicao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Papeis__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sigla__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos os canais de distribuição</label>
</ListView>